scenarios/03-multi-listener/tls-passthrough-same-hostname/30-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-passthrough-split-ports-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls-443
      protocol: TLS
      port: 443
      hostname: "tls.example.test"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: tls-9443
      protocol: TLS
      port: 9443
      hostname: "tls.example.test"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
