scenarios/03-multi-listener/tls-passthrough-same-hostname/31-backend-a-tlsroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: backend-a-tls-route
  namespace: backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: tls-passthrough-split-ports-gateway
      namespace: gateway-system
      sectionName: tls-443
  hostnames:
    - tls.example.test
  rules:
    - backendRefs:
        - name: backend-mtls
          port: 9443
